@@ -545,6 +545,17 @@ static VT100TCC decode_csi(unsigned char *datap,
                             break;
                     }
                     break;
+				case 'S':
+					result.type = XTERMCC_SU;
+					SET_PARAM_DEFAULT(param,0,1);
+					break;
+				case 'T':
+					if (param.count<2) {
+						result.type = XTERMCC_SD;
+						SET_PARAM_DEFAULT(param,0,1);
+					}
+					break;
+					
                     
 					// ANSI
 				case 'G':
