@@ -1,4 +1,13 @@
-2007-1-1	fabian
+2007-1-6	fabian
+
+	* Improved memory usage for "unlimited" scrollback situation. An upper limit is set to avoid eating up
+	  all system memory.
+
+2007-1-3	fabian
+
+	* Added support for xterm's CSI S (SU), CSI T (SD) commands. Nano now works correctly when term type is xterm.
+		  
+2007-1-2	fabian
 
 	* Fixed initial window size bug (#1623786).
 	* Fixed the bottom border, so it no longer overlaps with the resizing triangle.
